change: Reworked forge hammer to use upgrades instead of configuration change: added combustion chamber and planar stabilizer items, use for upgrading the forge hammer, found in forged containers

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -307,7 +307,7 @@
   "tetra.material.weeping_vine": "Weeping vine",
   "tetra.material.diamond": "Diamond",
   "tetra.material.diorite": "Diorite",
-  "tetra.material.vent_plate": "Vent plate",
+  "tetra.material.vent_plate": "Insulated plate",
   "tetra.material.gold": "Gold",
   "tetra.material.string": "String",
   "tetra.material.turtle_scute": "Turtle scute",
@@ -368,36 +368,35 @@
 
   "item.tetra.pristine_gem.description": "Yields increased bonuses when used for item improvements. Can be shattered at a workbench, which may yield several regular-quality pieces\n\n§8Drops are affected by the fortune enchantment",
 
-  "item.tetra.dragon_sinew": "Dragon sinew",
-  "item.tetra.dragon_sinew.tooltip": "Widely sought in a different time and place",
+  "item.tetra.dragon_sinew": "Dragon Sinew",
 
-  "item.tetra.magmatic_cell": "Thermal cell",
+  "item.tetra.magmatic_cell": "Thermal Cell",
   "item.tetra.magmatic_cell.charge": "Charge: %s",
   "item.tetra.magmatic_cell.charge_full": "§aFull",
   "item.tetra.magmatic_cell.charge_good": "§aGood",
   "item.tetra.magmatic_cell.charge_low": "§eLow",
   "item.tetra.magmatic_cell.charge_empty": "§cEmpty",
 
-  "block.tetra.forged_pillar": "Forged pillar",
-  "block.tetra.forged_platform": "Forged platform",
-  "block.tetra.forged_platform_slab": "Forged platform",
-  "block.tetra.forged_wall": "Forged wall",
-  "block.tetra.forged_vent": "Forged vent",
-  "block.tetra.forged_crate": "Forged crate",
+  "block.tetra.forged_pillar": "Forged Pillar",
+  "block.tetra.forged_platform": "Forged Platform",
+  "block.tetra.forged_platform_slab": "Forged Platform",
+  "block.tetra.forged_wall": "Forged Wall",
+  "block.tetra.forged_vent": "Forged Vent",
+  "block.tetra.forged_crate": "Forged Crate",
 
-  "block.tetra.forged_container": "Forged container",
+  "block.tetra.forged_container": "Forged Container",
   "tetra.forged_container.compartment": "Compartment %s",
 
-  "block.tetra.hammer_base": "Forge hammer",
-  "block.tetra.hammer_head.name": "Hammer head",
+  "block.tetra.hammer_base": "Forge Hammer",
+  "block.tetra.hammer_head.name": "Hammer Head",
 
-  "block.tetra.forged_workbench": "Forged workbench",
+  "block.tetra.forged_workbench": "Forged Workbench",
 
-  "block.tetra.transfer_unit": "Transfer unit",
-  "block.tetra.core_extractor": "Core extractor",
-  "block.tetra.extractor_piston": "Extractor piston",
-  "block.tetra.extractor_pipe": "Extractor pipe",
-  "block.tetra.seeping_bedrock": "Seeping bedrock",
+  "block.tetra.transfer_unit": "Transfer Unit",
+  "block.tetra.core_extractor": "Core Extractor",
+  "block.tetra.extractor_piston": "Extractor Piston",
+  "block.tetra.extractor_pipe": "Extractor Pipe",
+  "block.tetra.seeping_bedrock": "Seeping Bedrock",
 
   "block.multiblock_hint.1x2x1": "§8[§71x2x1 multiblock§8]",
 
@@ -418,9 +417,17 @@
   "item.tetra.metal_scrap.description": "Shapes of metal, their use undone or never to be known, awaits a purpose anew",
   "tetra.salvage_metal_scrap_action.label": "Salvage",
 
-  "item.tetra.vent_plate": "Vent plate",
-  "item.tetra.vent_plate.description": "Re-attach this to machinery to slightly increase its efficiency",
+  "item.tetra.vent_plate": "Insulated Plate",
+  "item.tetra.vent_plate.description": "Can be attached to a forge hammer or a transfer unit to increase it's efficiency",
   "tetra.salvage_vent_plate_action.label": "Salvage",
+
+  "item.tetra.combustion_chamber": "Combustion Chamber",
+  "item.tetra.combustion_chamber.description": "Can be attached to a forge hammer to increase it's hammer tier by 1",
+  "tetra.salvage_combustion_chamber_action.label": "Salvage",
+
+  "item.tetra.planar_stabilizer": "Planar Stabilizer",
+  "item.tetra.planar_stabilizer.description": "Can be attached to a forge hammer, causes major modules crafted with the hammer to slightly improve the stats of the item",
+  "tetra.salvage_planar_stabilizer_action.label": "Salvage",
 
   "item.tetra.stonecutter": "Stonecutter",
   "tetra.salvage_stonecutter_action.label": "Salvage",
@@ -827,7 +834,7 @@
   "tetra.variant.wide_guard/turtle_scute": "Turtle scute guard",
   "tetra.variant.wide_guard/shulker_shell": "Shulker_shell guard",
   "tetra.variant.wide_guard/bone": "Wide bone guard",
-  "tetra.variant.wide_guard/vent_plate": "Repurposed vent guard",
+  "tetra.variant.wide_guard/vent_plate": "Repurposed plate guard",
 
   "tetra/schematic/sword/socket.name": "Socket",
   "tetra/schematic/sword/socket.description": "Socket a gem into the sword, providing different effects depending on the gem.",
@@ -2896,7 +2903,7 @@
   "tetra.variant.tower/oak.prefix": "Oak",
   "tetra.variant.tower/netherite": "Netherite tower plate",
   "tetra.variant.tower/netherite.prefix": "Netherite",
-  "tetra.variant.tower/vent_plate": "Vent plate tower",
+  "tetra.variant.tower/vent_plate": "Insulated tower plate",
 
   "tetra/schematic/shield/plate/heater.name": "Heater plate",
   "tetra/schematic/shield/plate/heater.description": "Craft a heater shield plate from the given materials. Heaters are medium size shields that uses less integrity than a tower shield, but can only block for a limited amount of time before going on cooldown.",
@@ -2946,7 +2953,7 @@
   "tetra.variant.heater/bronze.prefix": "bronze",
   "tetra.variant.heater/steel": "Steel heater plate",
   "tetra.variant.heater/steel.prefix": "steel",
-  "tetra.variant.heater/vent_plate": "Vent plate heater",
+  "tetra.variant.heater/vent_plate": "Insulated heater plate",
   "tetra.variant.heater/crimson": "Crimson heater plate",
   "tetra.variant.heater/crimson.prefix": "Crimson",
   "tetra.variant.heater/warped": "Warped heater plate",
@@ -3004,7 +3011,7 @@
   "tetra.variant.buckler/bronze.prefix": "bronze",
   "tetra.variant.buckler/steel": "Steel buckler plate",
   "tetra.variant.buckler/steel.prefix": "steel",
-  "tetra.variant.buckler/vent_plate": "Vent plate buckler",
+  "tetra.variant.buckler/vent_plate": "Insulated buckler plate",
   "tetra.variant.buckler/crimson": "Crimson buckler plate",
   "tetra.variant.buckler/crimson.prefix": "Crimson",
   "tetra.variant.buckler/warped": "Warped buckler plate",
@@ -3337,19 +3344,19 @@
   "tetra.advancements.spelunking.find_cell.description": "Find a thermal cell in the ancient ruins",
   "tetra.advancements.spelunking.find_latch.title": "§oClick Click Click Click",
   "tetra.advancements.spelunking.find_latch.description": "Salvage a quick latch from the ancient ruins and use it to improve a toolbelt attachment",
-  "tetra.advancements.spelunking.fuel_hammer.title": "Dust Off",
-  "tetra.advancements.spelunking.fuel_hammer.description": "Fuel up a forge hammer using charged thermal cells",
   "tetra.advancements.spelunking.geode.title": "Hollow Solids",
   "tetra.advancements.spelunking.geode.description": "Find a geode in the depths",
   "tetra.advancements.spelunking.geode_open.title": "Mineral Crackers",
   "tetra.advancements.spelunking.geode_open.description": "Upgrade a mallet and use it to break open a geode at a workbench",
-  "tetra.advancements.spelunking.hammer_config.title": "Overdrive",
-  "tetra.advancements.spelunking.hammer_config.description": "Configure a forge hammer to provide tier 5 hammering",
+  "tetra.advancements.spelunking.hammer_fix.title": "Dust Off",
+  "tetra.advancements.spelunking.hammer_fix.description": "Fix up a forge hammer by attaching two charged thermal cells and two upgrades",
+  "tetra.advancements.spelunking.hammer_power.title": "Overdrive",
+  "tetra.advancements.spelunking.hammer_power.description": "Attach a combustion chamber to a forge hammer to increase it's hammer tier by 1",
   "tetra.advancements.spelunking.hammer_craft.title": "Magmatic Press Channel",
-  "tetra.advancements.spelunking.hammer_craft.description": "Use a forge hammer to craft a module requiring tier 4 hammering",
-  "tetra.advancements.spelunking.hammer_plate.title": "Plated Insulation",
-  "tetra.advancements.spelunking.hammer_plate.description": "Fully patch up a forge hammer with forged plates to increase its fuel efficiency",
-  "tetra.advancements.spelunking.loot_ruins.title": "Silk Touched Tiles",
+  "tetra.advancements.spelunking.hammer_craft.description": "Use a forge hammer to craft a module requiring tier 5+ hammering",
+  "tetra.advancements.spelunking.hammer_remove.title": "Clawfinger",
+  "tetra.advancements.spelunking.hammer_remove.description": "Use a claw to remove an upgrade from a forge hammer",
+  "tetra.advancements.spelunking.loot_ruins.title": "Silky Hex",
   "tetra.advancements.spelunking.loot_ruins.description": "Successfully harvest flooring from the ancient ruins",
   "tetra.advancements.spelunking.pristine_socket.title": "Immaculate Insert",
   "tetra.advancements.spelunking.pristine_socket.description": "Find a pristine gem in a geode and use it to socket a sword or a tool",
@@ -3367,13 +3374,15 @@
   "tetra.advancements.upgrades.double_headed.title": "[?] Double headed tools",
   "tetra.advancements.upgrades.double_headed.description": "When using double headed tools (e.g. pickaxes, axes, hammers) it's only the head with the highest value that will be considered when determining damage or harvest efficiency.",
   "tetra.advancements.upgrades.hammer_2.title": "Hammer II",
-  "tetra.advancements.upgrades.hammer_2.description": "Smelt stone and use it to craft a double-sided hammer head",
+  "tetra.advancements.upgrades.hammer_2.description": "Craft a double-sided diorite hammer, the diorite hammer provides tier two hammering capabilities",
   "tetra.advancements.upgrades.hammer_3.title": "Hammer III",
-  "tetra.advancements.upgrades.hammer_3.description": "Gain access to the third hammer tier by crafting a double sided iron hammer",
+  "tetra.advancements.upgrades.hammer_3.description": "Craft a double-sided iron hammer, the iron hammer provides tier three hammering capabilities",
   "tetra.advancements.upgrades.hammer_4.title": "Hammer IV",
-  "tetra.advancements.upgrades.hammer_4.description": "Use a forge hammer to craft a module requiring tier 4 hammering",
-  "tetra.advancements.upgrades.hammer_go.title": "Four to go",
-  "tetra.advancements.upgrades.hammer_go.description": "Figure out how to use a forge hammer to craft an obsidian hammer",
+  "tetra.advancements.upgrades.hammer_4.description": "Craft a double-sided blackstone hammer, the blackstone hammer provides tier four hammering capabilities",
+  "tetra.advancements.upgrades.hammer_5.title": "Hammer V",
+  "tetra.advancements.upgrades.hammer_5.description": "Craft a double-sided obsidian hammer using an upgraded forge hammer, the obsidian hammer provides tier five hammering capabilities",
+  "tetra.advancements.upgrades.hammer_6.title": "Hammer VI",
+  "tetra.advancements.upgrades.hammer_6.description": "Craft a double-sided netherite hammer using a fully upgraded forge hammer, the netherite hammer provides tier six hammering capabilities",
   "tetra.advancements.upgrades.repairs.title": "[?] Repairing modular items",
   "tetra.advancements.upgrades.repairs.description": "Modular items can be repaired in a workbench.\n * Repairing an item will require materials (and appropriate tools) for one of its modules\n * Repairing will cycle over all of the item's modules\n * Repairing magically unstable modules will cost experience\n * Each repair fully restores the durability of the item",
   "tetra.advancements.upgrades.sword_hone.title": "Honed Blade",
