--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2082,14 +2082,14 @@
   "tetra.synergy.single/javelin": "Javelin",
 
   "tetra/schematic/single/handle/basic_handle.name": "Basic handle",
-  "tetra/schematic/single/handle/basic_handle.description": "Replace the handle a basic handle crafted from the given materials. A sturdier handle supports heavier and more advanced tool heads.\n\nMaterial §density§r slightly decreases attack speed.",
+  "tetra/schematic/single/handle/basic_handle.description": "Replace the handle with a basic handle crafted from the given materials. \n\nProvides integrity based on the material. Material §fdensity§r slightly decreases attack speed.",
   "tetra/schematic/single/handle/basic_handle.slot1": "Handle material",
 
   "tetra.module.single/basic_handle.name": "Basic handle",
   "tetra.module.single/basic_handle.description": "A basic handle. Handles are the primary source of integrity.",
 
   "tetra/schematic/single/handle/light_handle.name": "Light handle",
-  "tetra/schematic/single/handle/light_handle.description": "Replace the handle with a lighter handle that allows the item to be thrown, but it provides less durability than other handles.\n\nMaterial §density§r increases thrown damage, but slightly decreases attack speed.",
+  "tetra/schematic/single/handle/light_handle.description": "Replace the handle with a lighter handle that allows the item to be thrown, but it provides less durability than other handles.\n\nProvides integrity based on the material. Material §fdensity§r increases thrown damage, but slightly decreases attack speed.",
   "tetra/schematic/single/handle/light_handle.slot1": "Handle material",
 
   "tetra.module.single/light_handle.name": "Light handle",
@@ -2125,7 +2125,7 @@
   "tetra.variant.light_handle/nickel": "Light nickel handle",
 
   "tetra/schematic/single/handle/long_handle.name": "Long handle",
-  "tetra/schematic/single/handle/long_handle.description": "Replace the handle with a longer handle that yields longer reach.\n\nMaterial §flexibility§r and §hardness§r improves the reach effect.\nMaterial §density§r slightly decreases attack speed.",
+  "tetra/schematic/single/handle/long_handle.description": "Replace the handle with a longer handle that yields longer reach.\n\nProvides integrity based on the material. Material §fflexibility§r and §fhardness§r improves the reach effect.\nMaterial §fdensity§r slightly decreases attack speed.",
   "tetra/schematic/single/handle/long_handle.slot1": "Handle material",
 
   "tetra.module.single/long_handle.name": "Long handle",
