--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -396,6 +396,30 @@
   "tetra.material.cherry.prefix": "Cherry",
   "tetra.material.maple": "Maple",
   "tetra.material.maple.prefix": "Maple",
+  "tetra.material.agate": "Agate",
+  "tetra.material.agate.prefix": "Agate",
+  "tetra.material.amethyst":"Amethyst",
+  "tetra.material.amethyst.prefix":"Amethyst",
+  "tetra.material.certus_quartz": "Certus quartz",
+  "tetra.material.certus_quartz.prefix": "Certus quartz",
+  "tetra.material.citrine":"Citrine",
+  "tetra.material.citrine.prefix":"Citrine",
+  "tetra.material.ruby": "Ruby",
+  "tetra.material.ruby.prefix": "Ruby",
+  "tetra.material.sapphire":"Sapphire",
+  "tetra.material.sapphire.prefix":"Sapphire",
+  "tetra.material.serendibite": "Serendibite",
+  "tetra.material.serendibite.prefix": "Serendibite",
+  "tetra.material.hemp": "Hemp",
+  "tetra.material.hemp.prefix": "Hemp",
+  "tetra.material.osmium": "Osmium",
+  "tetra.material.osmium.prefix": "Osmium",
+  "tetra.material.treated_wood": "Treated wood",
+  "tetra.material.treated_wood.prefix": "Treated wood",
+  "tetra.material.dragon_bone": "Dragon bone",
+  "tetra.material.dragon_bone.prefix": "Dragon bone",
+  "tetra.material.wither_bone": "Wither bone",
+  "tetra.material.wither_bone.prefix": "Wither bone",
 
   "item.tetra.modular.broken": "Broken",
   "item.tetra.modular.empty_slot": "Empty",
