changed: added materials from nature's aura

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -420,6 +420,14 @@
   "tetra.material.dragon_bone.prefix": "Dragon bone",
   "tetra.material.wither_bone": "Wither bone",
   "tetra.material.wither_bone.prefix": "Wither bone",
+  "tetra.material.ancient_wood": "Ancient wood",
+  "tetra.material.ancient_wood.prefix": "Ancient wood",
+  "tetra.material.infused_iron": "Infused iron",
+  "tetra.material.infused_iron.prefix": "Botanist's",
+  "tetra.material.sky": "Sky metal",
+  "tetra.material.sky.prefix": "Skyseeker's",
+  "tetra.improvement.naturesaura_aura_mending_innate.name": "Aura Mend",
+  "tetra.improvement.naturesaura_aura_mending_innate.description": "The item will repair itself using aura",
 
   "item.tetra.modular.broken": "Broken",
   "item.tetra.modular.empty_slot": "Empty",
