fix: stopped bow strings from prefixing the item name

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -1486,7 +1486,6 @@
   "tetra.module.bow/basic_string.name": "Basic string",
   "tetra.module.bow/basic_string.description": "A basic bowstring. The bowstring is the primary source of integrity for bows.",
   "tetra.module.bow/basic_string.material_name": "%s bowstring",
-  "tetra.module.bow/basic_string.prefix": "%s",
 
   "tetra.variant.basic_string/string": "Basic string",
   "tetra.variant.basic_string/hide": "Hide cord",
@@ -2225,57 +2224,57 @@
   "tetra.improvement.destabilized/ensorcellation_magic_edge.name": "§5Destabilized: Magic Edge",
   "tetra.improvement.destabilized/ensorcellation_magic_edge.description": "Reduces the effect of the Magic Edge enchantment",
   "tetra.improvement.enchantment/ensorcellation_vorpal.name": "Vorpal",
-  "tetra.improvement.enchantment/ensorcellation_vorpal.description": "Randomly performs powerful attacks and decapitations.",
+  "tetra.improvement.enchantment/ensorcellation_vorpal.description": "Randomly performs powerful attacks and decapitations",
   "tetra.improvement.destabilized/ensorcellation_vorpal.name": "§5Destabilized: Vorpal",
   "tetra.improvement.destabilized/ensorcellation_vorpal.description": "Reduces the effect of the Vorpal enchantment",
   "tetra.improvement.enchantment/ensorcellation_excavating.name": "Excavating",
-  "tetra.improvement.enchantment/ensorcellation_excavating.description": "Harvests additional blocks in a radius.",
+  "tetra.improvement.enchantment/ensorcellation_excavating.description": "Harvests additional blocks in a radius",
   "tetra.improvement.destabilized/ensorcellation_excavating.name": "§5Destabilized: Excavating",
   "tetra.improvement.destabilized/ensorcellation_excavating.description": "Reduces the effect of the Excavating enchantment",
   "tetra.improvement.enchantment/ensorcellation_hunter.name": "Hunter\u0027s Bounty",
-  "tetra.improvement.enchantment/ensorcellation_hunter.description": "Provides a chance of additional drops from slain animals.",
+  "tetra.improvement.enchantment/ensorcellation_hunter.description": "Provides a chance of additional drops from slain animals",
   "tetra.improvement.destabilized/ensorcellation_hunter.name": "§5Destabilized: Hunter\u0027s Bounty",
   "tetra.improvement.destabilized/ensorcellation_hunter.description": "Reduces the effect of the Hunter\u0027s Bounty enchantment",
   "tetra.improvement.enchantment/ensorcellation_quick_draw.name": "Quick Draw",
-  "tetra.improvement.enchantment/ensorcellation_quick_draw.description": "Decreases the amount of time needed to fully draw a bow.",
+  "tetra.improvement.enchantment/ensorcellation_quick_draw.description": "Decreases the amount of time needed to fully draw a bow",
   "tetra.improvement.destabilized/ensorcellation_quick_draw.name": "§5Destabilized: Quick Draw",
   "tetra.improvement.destabilized/ensorcellation_quick_draw.description": "Reduces the effect of the Quick Draw enchantment",
   "tetra.improvement.enchantment/ensorcellation_trueshot.name": "Trueshot",
-  "tetra.improvement.enchantment/ensorcellation_trueshot.description": "Increases the accuracy and speed of arrows, and allows them to pierce.",
+  "tetra.improvement.enchantment/ensorcellation_trueshot.description": "Increases the accuracy and speed of arrows, and allows them to pierce",
   "tetra.improvement.destabilized/ensorcellation_trueshot.name": "§5Destabilized: Trueshot",
   "tetra.improvement.destabilized/ensorcellation_trueshot.description": "Reduces the effect of the Trueshot enchantment",
   "tetra.improvement.enchantment/ensorcellation_volley.name": "Volley",
-  "tetra.improvement.enchantment/ensorcellation_volley.description": "Three arrows are fired in an arc. Only one arrow is consumed.",
+  "tetra.improvement.enchantment/ensorcellation_volley.description": "Three arrows are fired in an arc. Only one arrow is consumed",
   "tetra.improvement.enchantment/ensorcellation_angler.name": "Angler\u0027s Bounty",
-  "tetra.improvement.enchantment/ensorcellation_angler.description": "Provides a chance of catching extra items when fishing.",
+  "tetra.improvement.enchantment/ensorcellation_angler.description": "Provides a chance of catching extra items when fishing",
   "tetra.improvement.destabilized/ensorcellation_angler.name": "§5Destabilized: Angler\u0027s Bounty",
   "tetra.improvement.destabilized/ensorcellation_angler.description": "Reduces the effect of the Angler\u0027s Bounty enchantment",
   "tetra.improvement.enchantment/ensorcellation_pilfering.name": "Pilfering",
-  "tetra.improvement.enchantment/ensorcellation_pilfering.description": "May steal a piece of armor from hooked targets.",
+  "tetra.improvement.enchantment/ensorcellation_pilfering.description": "May steal a piece of armor from hooked targets",
   "tetra.improvement.enchantment/ensorcellation_furrowing.name": "Furrowing",
-  "tetra.improvement.enchantment/ensorcellation_furrowing.description": "Tills additional blocks in a line.",
+  "tetra.improvement.enchantment/ensorcellation_furrowing.description": "Tills additional blocks in a line",
   "tetra.improvement.destabilized/ensorcellation_furrowing.name": "§5Destabilized: Furrowing",
   "tetra.improvement.destabilized/ensorcellation_furrowing.description": "Reduces the effect of the Furrowing enchantment",
   "tetra.improvement.enchantment/ensorcellation_tilling.name": "Tilling",
-  "tetra.improvement.enchantment/ensorcellation_tilling.description": "Tills additional blocks in a radius.",
+  "tetra.improvement.enchantment/ensorcellation_tilling.description": "Tills additional blocks in a radius",
   "tetra.improvement.destabilized/ensorcellation_tilling.name": "§5Destabilized: Tilling",
   "tetra.improvement.destabilized/ensorcellation_tilling.description": "Reduces the effect of the Tilling enchantment",
   "tetra.improvement.enchantment/ensorcellation_weeding.name": "Weeding",
-  "tetra.improvement.enchantment/ensorcellation_weeding.description": "Clears plants while tilling blocks.",
+  "tetra.improvement.enchantment/ensorcellation_weeding.description": "Clears plants while tilling blocks",
   "tetra.improvement.enchantment/ensorcellation_bulwark.name": "Bulwark",
-  "tetra.improvement.enchantment/ensorcellation_bulwark.description": "Prevents the wielder from being knocked back and can disable an attacker\u0027s weapon.",
+  "tetra.improvement.enchantment/ensorcellation_bulwark.description": "Prevents the wielder from being knocked back and can disable an attacker\u0027s weapon",
   "tetra.improvement.enchantment/ensorcellation_phalanx.name": "Phalanx",
-  "tetra.improvement.enchantment/ensorcellation_phalanx.description": "Allows the wielder to move faster while using a shield.",
+  "tetra.improvement.enchantment/ensorcellation_phalanx.description": "Allows the wielder to move faster while using a shield",
   "tetra.improvement.destabilized/ensorcellation_phalanx.name": "§5Destabilized: Phalanx",
   "tetra.improvement.destabilized/ensorcellation_phalanx.description": "Reduces the effect of the Phalanx enchantment",
   "tetra.improvement.enchantment/ensorcellation_soulbound.name": "Soulbound",
-  "tetra.improvement.enchantment/ensorcellation_soulbound.description": "The item will remain with the owner after an untimely demise.",
+  "tetra.improvement.enchantment/ensorcellation_soulbound.description": "The item will remain with the owner after an untimely demise",
   "tetra.improvement.enchantment/ensorcellation_curse_fool.name": "§5Curse of Foolishness",
-  "tetra.improvement.enchantment/ensorcellation_curse_fool.description": "Prevents experience gain when using the item.",
+  "tetra.improvement.enchantment/ensorcellation_curse_fool.description": "Prevents experience gain when using the item",
   "tetra.improvement.enchantment/ensorcellation_curse_mercy.name": "§5Curse of Mercy",
-  "tetra.improvement.enchantment/ensorcellation_curse_mercy.description": "Prevents a weapon from dealing a lethal blow.",
+  "tetra.improvement.enchantment/ensorcellation_curse_mercy.description": "Prevents a weapon from dealing a lethal blow",
   "tetra.improvement.enchantment/naturesaura_aura_mending.name": "Nature\u0027s Mend",
-  "tetra.improvement.enchantment/naturesaura_aura_mending.description": "Repairs tools using Aura",
+  "tetra.improvement.enchantment/naturesaura_aura_mending.description": "The item will repair itself using aura",
   "tetra.improvement.enchantment/apotheosis_capturing.name": "Capturing",
   "tetra.improvement.enchantment/apotheosis_capturing.description": "Makes mobs have a chance to drop their spawn egg.",
   "tetra.improvement.destabilized/apotheosis_capturing.name": "§5Destabilized: Capturing",
